# strands_qsr

./: README.md
spatial_relation_classifier/: CMakeLists.txt~  package.xml~
strands_qsr_echo_classifier/: CMakeLists.txt  package.xml
strands_qsr_echo_classifier/src/: echo_classification_service.py
strands_qsr_evalution/: CMakeLists.txt  package.xml  perception_model.gnumeric
strands_qsr_evalution/src/: evaluation_client.py  generate_perception.py  perception.py
strands_qsr_generator/: CMakeLists.txt  package.xml
strands_qsr_generator/src/: qsr.py  qsr_generator.py
strands_qsr_learned_qualitators/: CMakeLists.txt  package.xml  setup.py
strands_qsr_learned_qualitators/scripts/: classify_scenes.py  classify_service.py  create_qualitators.py  create_sceneprobs.py  create_tpc_qualitators.py  test_qualitators.py  visualise_scenes.py
strands_qsr_msgs/: CMakeLists.txt
strands_qsr_msgs/msg/: GroupEstimate.msg  ObjectClassification.msg
strands_qsr_msgs/srv/: GetGroupClassification.srv  GetGroupEstimate.srv  GetQSRDescription.srv
strands_qsr_random_classifier/: CMakeLists.txt  package.xml
strands_qsr_random_classifier/src/: random_classification_client.py  random_classification_service.py
strands_qsr_random_estimator/: CMakeLists.txt  package.xml
strands_qsr_random_estimator/src/: random_estimator_client.py  random_estimator_service.py
strands_qsr_sa_classifier/: CMakeLists.txt  package.xml
strands_qsr_sa_classifier/src/: sa_classification_service.py
strands_qsr_tpc_classifier/: CMakeLists.txt  package.xml
(+155 files in other folders)
